@@ -1,5 +1,5 @@
 #
-# $Id: Makefile.am,v 1.9 2001-07-06 00:31:23 smr99 Exp $
+# $Id: Makefile.am,v 1.10 2001-07-07 19:12:41 smr99 Exp $
 #
 
 EXTRA_DIST = cppunit.dsw cppunit.dsp
@@ -20,8 +20,7 @@ libcppunit_la_SOURCES = \
   TextTestResult.cpp \
   TextTestRunner.cpp \
   TestFactoryRegistry.cpp \
-  TypeInfoHelper.cpp \
-  estring.h
+  TypeInfoHelper.cpp
 
 libcppunit_la_LDFLAGS= \
  -version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE) \
